src/test/ui/lifetimes/lifetime-mismatch-between-trait-and-impl.stderr
error: `impl` item signature doesn't match `trait` item signature
  --> $DIR/lifetime-mismatch-between-trait-and-impl.rs:6:5
   |
LL |     fn foo<'a>(x: &i32, y: &'a i32) -> &'a i32;
   |     ------------------------------------------- expected fn(&i32, &'a i32) -> &'a i32
...
LL |     fn foo<'a>(x: &'a i32, y: &'a i32) -> &'a i32 {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ found fn(&i32, &i32) -> &i32
   |
   = note: expected `fn(&i32, &'a i32) -> &'a i32`
              found `fn(&i32, &i32) -> &i32`

error: aborting due to previous error

